@@ -1,3 +1,8 @@
+2008-01-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * examples/audio_out.c
+    Apply patch from Yair K. to fix compiles with OSS v4.
+
 2007-07-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * acinclude.m4
